--- a/package.json
+++ b/package.json
@@ -68,9 +68,8 @@
     "rollup-plugin-node-resolve": "^3.0.0"
   },
   "dependencies": {
-    "dedent-preserving-indents": "^0.2.0",
-    "ramda": "^0.25.0",
-    "ramda-adjunct": "^2.5.0"
+    "jest-diff": "^23.2.0",
+    "jest-matcher-utils": "^23.2.0"
   },
   "husky": {
     "hooks": {
